# android-nle

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/effects/Cyberpunk.effect/: animations.json  graph.json  manifest.json  parameters.json
app/src/main/assets/effects/Dreamy.effect/: animations.json  graph.json  manifest.json  parameters.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/command/: Command.h  CommandStack.h
app/src/main/cpp/command/commands/: AddClipCommand.h  SetBrightnessCommand.h  TimelineCommands.h
app/src/main/cpp/core/: Clip.h  Keyframe.h  MathTypes.h  MediaSource.h  PlaybackClock.h  Project.h  Property.h  PropertyBag.h  Timeline.h  Track.h
app/src/main/cpp/decode/: Decoder.cpp  Decoder.h  DecoderThread.cpp  DecoderThread.h  FrameQueue.h
app/src/main/cpp/effects/: EffectGraphDef.h  EffectNodeRegistry.cpp  EffectNodeRegistry.h  EffectPackageLoader.cpp  EffectPackageLoader.h  EffectRuntime.cpp  EffectRuntime.h
app/src/main/cpp/effects/nodes/: BlurNode.h  ColorNode.h  ExternalInputNode.h  TransformNode.h
app/src/main/cpp/encode/: Encoder.cpp  Encoder.h
app/src/main/cpp/engine/: EditorEngine.cpp  EditorEngine.h
app/src/main/cpp/include/nle/core/: Types.h
app/src/main/cpp/jni/: JniUtils.cpp  JniUtils.h  jni_bridge.cpp
app/src/main/cpp/playback/: PlaybackEngine.cpp  PlaybackEngine.h
app/src/main/cpp/render/: GLContext.cpp  GLContext.h  GraphicsDevice.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Texture.cpp  Texture.h  TexturePool.h
app/src/main/cpp/rendergraph/: Frame.h  RenderGraph.h  RenderNode.h
app/src/main/cpp/rendergraph/nodes/: BrightnessNode.h  ClipTransformNode.h  ColorConvertNode.h  CompositeNode.h  DecoderSourceNode.cpp  DecoderSourceNode.h  OutputNode.h  PackagedEffectSlotNode.h
app/src/main/cpp/util/: Json.cpp  Json.h  SpscRingBuffer.h
app/src/main/java/com/nle/editor/: MainActivity.kt
app/src/main/java/com/nle/editor/engine/: EditorRepository.kt  EditorState.kt  NativeEditorEngine.kt
app/src/main/java/com/nle/editor/ui/: EditorScreen.kt
app/src/main/java/com/nle/editor/ui/media/: MediaBrowserPanel.kt
app/src/main/java/com/nle/editor/ui/preview/: PreviewPanel.kt
app/src/main/java/com/nle/editor/ui/properties/: PropertiesPanel.kt
app/src/main/java/com/nle/editor/ui/timeline/: TimelinePanel.kt
app/src/main/java/com/nle/editor/viewmodel/: EditorViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/values/: strings.xml
host_tests/: build_and_run.sh  effect_engine_tests.cpp
host_tests/stubs/: FakeGraphicsDevice.h  Texture_host_stub.cpp
